--- a/package.json
+++ b/package.json
@@ -5,11 +5,13 @@
   "description": "The Leadership Institute Personal Inventory",
   "repository": "",
   "license": "MIT",
+  "engines": {
+    "node": "6.9.2"
+  },
   "dependencies": {
     "bootstrap": "^3.2.0",
     "json-loader": "^0.5.4",
     "react": "^0.11.2",
-    "react-notifications": "^1.3.0",
     "react-router": "^0.7.0",
     "react-toolbox": "^1.3.3"
   },
