--- a/package.json
+++ b/package.json
@@ -9,50 +9,53 @@
     "node": "6.9.2"
   },
   "dependencies": {
-    "bootstrap": "^3.2.0",
+    "bootstrap": "^3.3.7",
     "json-loader": "^0.5.4",
-    "react": "^0.11.2",
-    "react-router": "^0.7.0",
-    "react-toolbox": "^1.3.3"
+    "react": "^15.4.2",
+    "react-addons-css-transition-group": "^15.4.2",
+    "react-dom": "^15.4.2",
+    "react-router": "^3.0.1",
+    "react-toolbox": "^1.3.4"
   },
   "devDependencies": {
-    "browser-sync": "^1.5.1",
-    "del": "^0.1.3",
-    "gulp": "^3.8.8",
-    "gulp-autoprefixer": "1.0.1",
-    "gulp-cache": "^0.2.2",
-    "gulp-changed": "^1.0.0",
-    "gulp-csscomb": "^3.0.2",
-    "gulp-gh-pages": "^0.3.4",
-    "gulp-htmlmin": "^0.2.0",
-    "gulp-if": "^1.2.4",
-    "gulp-imagemin": "^1.0.1",
-    "gulp-jshint": "^1.8.4",
-    "gulp-less": "^1.3.6",
-    "gulp-load-plugins": "^0.6.0",
-    "gulp-minify-css": "^0.3.10",
-    "gulp-plumber": "^0.6.5",
-    "gulp-size": "^1.1.0",
-    "gulp-uglify": "^1.0.1",
-    "gulp-util": "^3.0.1",
-    "jshint": "^2.5.6",
-    "jshint-loader": "^0.8.0",
-    "jshint-stylish": "^1.0.0",
-    "jsx-loader": "^0.11.0",
-    "karma": "^0.12.23",
-    "karma-chrome-launcher": "^0.1.4",
-    "karma-firefox-launcher": "^0.1.3",
-    "karma-jasmine": "^0.1.5",
-    "karma-phantomjs-launcher": "^0.1.4",
-    "karma-webpack": "^1.2.2",
-    "merge-stream": "^0.1.5",
-    "minimist": "^1.1.0",
-    "protractor": "^1.3.0",
-    "psi": "^0.1.2",
-    "run-sequence": "^0.3.7",
-    "url-loader": "^0.5.5",
-    "webpack": "^1.4.3",
-    "webpack-dev-server": "^1.6.5"
+    "browser-sync": "^2.18.6",
+    "del": "^2.2.2",
+    "file-loader": "^0.9.0",
+    "gulp": "^3.9.1",
+    "gulp-autoprefixer": "^3.1.1",
+    "gulp-cache": "^0.4.5",
+    "gulp-changed": "^1.3.2",
+    "gulp-csscomb": "^3.0.8",
+    "gulp-gh-pages": "^0.5.4",
+    "gulp-htmlmin": "^3.0.0",
+    "gulp-if": "^2.0.2",
+    "gulp-imagemin": "^3.1.1",
+    "gulp-jshint": "^2.0.4",
+    "gulp-less": "^3.3.0",
+    "gulp-load-plugins": "^1.4.0",
+    "gulp-minify-css": "^1.2.4",
+    "gulp-plumber": "^1.1.0",
+    "gulp-size": "^2.1.0",
+    "gulp-uglify": "^2.0.0",
+    "gulp-util": "^3.0.8",
+    "jshint": "^2.9.4",
+    "jshint-loader": "^0.8.3",
+    "jshint-stylish": "^2.2.1",
+    "jsx-loader": "^0.13.2",
+    "karma": "^1.4.0",
+    "karma-chrome-launcher": "^2.0.0",
+    "karma-firefox-launcher": "^1.0.0",
+    "karma-jasmine": "^1.1.0",
+    "karma-phantomjs-launcher": "^1.0.2",
+    "karma-webpack": "^2.0.1",
+    "merge-stream": "^1.0.1",
+    "minimist": "^1.2.0",
+    "protractor": "^5.0.0",
+    "psi": "^2.0.4",
+    "run-sequence": "^1.2.2",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.14.0",
+    "webpack-dev-server": "^1.16.2"
   },
   "scripts": {
     "prestart": "npm install",
